--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,11 @@ h1 {
   line-height: 1.1;
 }
 
+.heading-center {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 button {
   border-radius: 8px;
   border: 1px solid transparent;
